// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-1yzi1gx-YouTubeVideoBlockWrapper eap2o311"
  >
    <div
      class="css-1bkzc1-YouTubeVideoBlockPlayer eap2o310"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`YouTube Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1yzi1gx-YouTubeVideoBlockWrapper eap2o311"
  >
    <div
      class="css-1bkzc1-YouTubeVideoBlockPlayer eap2o310"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
